--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-aiosmtplib==1.1.7
+aiofiles==0.5.0
+aiosmtplib==2.0.0
+alembic==1.9.2
+aniso8601==7.0.0
 anyio==3.6.1
+asgiref==3.6.0
 asyncpg==0.27.0
 bcrypt==4.0.0
+black==22.12.0
 blinker==1.5
 certifi==2022.9.24
 cffi==1.15.1
@@ -13,16 +18,22 @@ databases==0.6.1
 dnspython==2.2.1
 ecdsa==0.18.0
 email-validator==1.3.0
-fastapi==0.85.0
-fastapi-mail==1.2.0
+fastapi==0.88.0
+fastapi-mail==1.2.4
 greenlet==1.1.3
 h11==0.14.0
+httpcore==0.16.3
 httptools==0.5.0
+httpx==0.23.2
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.4
 MarkupSafe==2.1.1
+mypy-extensions==0.4.3
 orjson==3.8.0
+pathspec==0.10.3
+platformdirs==2.6.2
 psycopg2==2.9.3
 pyasn1==0.4.8
 pycparser==2.21
@@ -32,16 +43,20 @@ python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.1
+rfc3986==1.5.0
 rsa==4.9
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+Rx==1.6.3
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.41
-starlette==0.20.4
+starlette==0.22.0
+tomli==2.0.1
 typing_extensions==4.3.0
 ujson==5.5.0
 urllib3==1.26.12
-uvicorn==0.18.3
+uvicorn==0.17.6
 watchfiles==0.17.0
-websockets==10.3
+watchgod==0.8.2
+websockets==10.4
